@@ -88,7 +88,7 @@ use vars qw ( $VERSION );
 #   The following variable is updated by Emacs setup whenever
 #   this file is saved.
 
-$VERSION = '2008.0222.1633';
+$VERSION = '2008.0222.1725';
 
 # ..................................................................
 
@@ -845,11 +845,16 @@ Contact maintainer of C<package-N.N-1-src.tar.bz2> for details.
 
 Same as command B<[all]> but without the B<[finish]> step.
 
-=item B<cygsrc [<--dir|-d>] PACKAGE>
+=item B<cygsrc [-b|--binary] [<--dir|-d>] PACKAGE>
 
-Download Cygwin net release package. If option B<--dir> is given,
-create directory with name I<PACKAGE>, cd to it and start downloading
-I<PACKAGE>.
+NOTES: 1) This command must be run in an empty directory for it to
+work properly 2) No other rcommand line options are interpreted. This
+is standalone command.
+
+Download both Cygwin source and binary net release package. If option
+B<--dir> is given, create directory with name I<PACKAGE>, cd to it and
+start downloading I<PACKAGE>. If option B<--binary> is given, download
+only binary package.
 
 This command is primarily used for downloading sources of orphaned
 package in order to prepare ITA (intent to adopt) to Cygwin
@@ -860,9 +865,6 @@ application mailing list.
   3. the CYGWIN-PATCHES is extracted from *.patch
   4. the rest of the patches (excluding CYGWIN-PATCHES) is stored
      to *-rest.patch
-
-NOTE: This command must be run in an empty directory for it to work
-properly.
 
 See ENVIRONMENT for changing the download URL location to closer
 local Cygwin package mirror site.
