@@ -28,6 +28,8 @@
 	(CygbuildCommandMainCheckSpecial): Renamed. Was
 	`CygbuildCommandMainCheckHelp'.
 	(CygbuildCmdDownloadCygwinPackage): Check wget error status.
+	(CygbuildCmdDownloadCygwinPackage): add MODE argument to
+	select only binary package download.
 
 2008-02-21  Jari Aalto  <jari.aalto@cante.net>
 
